post create changed, categories added
