# app/Http/Controllers/Controller.php
@@ -13,7 +13,18 @@ use Illuminate\Routing\Controller as BaseController;
  *      description="Angular project - ngBlog API documentation"
  * )
  *
+ *
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     description="Login with email and password to get the authentication token",
+ *     name="Token based Based",
+ *     in="header",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="apiAuth",
+ * )
  */
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
